# Gerar-legendas-traduzidas

./: .gitignore  Dockerfile  README.md  main_api.py  pyproject.toml  requirements.txt
Actions/translateActions/: main.py
App/: config.py  dependencies.py  main_api.py
experiments/: mainTraduzirAudioVideo.py
tradutor/: main.py  mainOnlyLegend.py  mainV1.py
